# judaicalink-labs

./: .gitignore  .gitmodules  .htpasswd  .readthedocs.yaml  CHANGELOG.md  INSTALL.md  README.md  deployment.md  pyproject.toml  requirements.txt  runserver.sh  setup.cfg  setup.py  update.sh
.github/workflows/: codeql-analysis.yml
data/: textfile-djh.json
docs/: index.rst  requirements.txt
labs/: .fuse_hidden0039885c0000000b  .fuse_hidden003baf7b0000000c  beacon-persons.txt  db2.sqlite3  gulpfile.js  localhost.crt  localhost.csr  localhost.key  manage.py  package-lock.json  package.json  requirements.txt  sample.env  unparsed_dates.txt  webpack-stats.json  webpack.config.js
labs/api/: solrapi.py  urls.py  views.py
labs/backend/: admin.py  apps.py  consumers.py  dataset_loader.py  models.py  routing.py  sparqltools.py  tasks.py  urls.py  views.py
labs/cm_e_search/: apps.py  sitemaps.py  urls.py  views.py
labs/cm_search/: apps.py  blacklist.csv  filter.py  sitemaps.py  urls.py  views.py
labs/contact/: forms.py  urls.py  views.py
labs/dashboard/: urls.py  views.py
labs/data/: admin.py  apps.py  consumers.py  hugotools.py  models.py  sitemaps.py  sparqltools.py  tasks.py  urls.py  utils.py  views.py
labs/enrichment/: urls.py  views.py
labs/issuetracker/: apps.py  forms.py  models.py  urls.py  views.py
labs/labs/: README.md  asgi.py  localsettings.py.example  middleware.py  routing.py  settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
labs/lodjango/: apps.py  namespace.py  settings.py  urls.py  views.py
labs/search/: forms.py  (+3 more)
(+185 files in other folders)
