[metadata]
name = judaicalink-labs
version = 0.0.1
description = Django webapp for the JudaicaLink project
long_description = file: README.md
url = https://labs.judaicalink.org/
author = The JudaicaLink Team
author_email = schnabel@hdm-stuttgart.de
license = MIT-License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Users
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2